Creation package Business  and class Student (Etudiant)
I created a new package named Business andin this package I created a
new class Studient (Etudiant)

--- a/stage_isetna/stage_isetna.csproj
+++ b/stage_isetna/stage_isetna.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Accueil.Designer.cs">
       <DependentUpon>Accueil.cs</DependentUpon>
     </Compile>
+    <Compile Include="Business\Etudiant.cs" />
     <Compile Include="Etudiant.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -97,6 +98,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DA\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
